# iced_wry

./: Cargo.toml  README.md  rustfmt.toml
examples/: simple.rs
src/: lib.rs  manager.rs  message.rs  subscription.rs
