[package]
name = "iced_wry"
description = "Embed a webview in your iced application, using the wry webkit crate"
license = "MIT"
authors = ["Newton Toto <nyachiengatoto@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.53"
iced = { version = "0.13", default-features = false, features = ["advanced"] }
winit = { version = "*", features = ["wayland"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "*", default-features = false }
winit = { version = "*", default-features = false, features = ["x11"] }
x11-dl = "2.21.0"

[dev-dependencies]
iced = { version = "0.13", default-features = false, features = [
	"advanced",
	"tiny-skia",
] }
